// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AudioButton Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bdvvtL fZQeXN"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots AudioButton Playing 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bdvvtL fZQeXN"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="sc-dkPtRN doeNQV"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-dkPtRN doeNQV"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary Outline 1`] = `
<button
  className="sc-dkPtRN erzFDq"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-dkPtRN bvmbqx"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary Outline 1`] = `
<button
  className="sc-dkPtRN fPUQHW"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots CompleteButton Default 1`] = `
<button
  className="sc-eCImPb CimIN"
  onClick={[Function]}
>
  TASK COMPLETED
</button>
`;

exports[`Storyshots CountPanel Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-furwcr fYIddm"
  >
    <div
      className="sc-jRQBWg jCCcHD"
    >
      <p
        className="sc-gKclnd fxvncB"
      >
        0
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        TODAY
      </p>
    </div>
    <div
      className="sc-jRQBWg jCCcHD"
    >
      <p
        className="sc-gKclnd fxvncB"
      >
        0
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/13 - 2/19
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots CountPanelItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-jRQBWg jCCcHD"
  >
    <p
      className="sc-gKclnd fxvncB"
    >
      0
    </p>
    <p
      className="sc-iCfMLu ceNQhQ"
    >
      TODAY
    </p>
  </div>
</div>
`;

exports[`Storyshots DateCountItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-crHmcD hGvKfC"
  >
    <div
      className="sc-jrQzAO gIhMrF"
    >
      <p
        className="sc-kDTinF dOXFGf"
      >
        5
      </p>
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
    </div>
    <div
      className="sc-iqseJM"
    >
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/15
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        TUE
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountItem No Tomato 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-crHmcD hGvKfC"
  >
    <div
      className="sc-jrQzAO gIhMrF"
    />
    <div
      className="sc-iqseJM"
    >
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/15
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        TUE
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountPanel Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-egiyK lfayKR"
  >
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      />
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/13
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          SUN
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          1
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/14
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          MON
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          2
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/15
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          TUE
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          3
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/16
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          WED
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          4
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/17
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          THU
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          5
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/18
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          FRI
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          6
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/19
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          SAT
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DoneModal Break 1`] = `
<div
  className="sc-hBUSln gZtUdV"
>
  <div
    className="sc-bqiRlB KDuzK"
    onClick={[Function]}
  />
  <div
    className="sc-ksdxgE dxMXHJ"
  >
    <div
      className="sc-bkkeKt fUmskZ"
    >
      <p
        className="sc-fotOHu hwbwsU"
      >
        Break time is over
      </p>
      <p>
        Would you like to start the next task?
      </p>
      <div
        className="sc-hKwDye faWgkr"
      >
        <button
          className="sc-dkPtRN doeNQV"
          data-large={true}
          onClick={[Function]}
        >
          START
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DoneModal Task 1`] = `
<div
  className="sc-hBUSln gZtUdV"
>
  <div
    className="sc-bqiRlB KDuzK"
    onClick={[Function]}
  />
  <div
    className="sc-ksdxgE dxMXHJ"
  >
    <div
      className="sc-bkkeKt fUmskZ"
    >
      <p
        className="sc-fotOHu hwbwsU"
      >
        Task Done
      </p>
      <p>
        You have done the task!
      </p>
      <div
        className="sc-hKwDye faWgkr"
      >
        <button
          className="sc-dkPtRN doeNQV"
          data-large={true}
          onClick={[Function]}
        >
          TAKE A BREAK
        </button>
        <button
          className="sc-dkPtRN bvmbqx"
          data-large={true}
          onClick={[Function]}
        >
          KEEP GOING
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Default 1`] = `
<label
  className="sc-ieecCq qVlmW"
>
  TEST
</label>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="sc-hBUSln gZtUdV"
>
  <div
    className="sc-bqiRlB KDuzK"
    onClick={[Function]}
  />
  <div
    className="sc-ksdxgE dxMXHJ"
  >
    <p
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      My Modal
    </p>
  </div>
</div>
`;

exports[`Storyshots PageButton Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-dJjYzT hZnrvD"
  />
</div>
`;

exports[`Storyshots Panel Ringtone 1`] = `
<div
  className="sc-bBHxTw cLOmoY"
>
  <div
    className="sc-dlVxhl PslTt"
  >
    <button
      className="sc-hGPBjI CtDJB"
      onClick={[Function]}
    >
      WORK
    </button>
    <button
      className="sc-hGPBjI eqpbgq"
      onClick={[Function]}
    >
      BREAK
    </button>
  </div>
  <ul
    className="sc-fKVqWL YANSf"
  >
    <li
      className="sc-kfPuZi gxqEEA"
    >
      <div
        className="sc-llYSUQ hRpDJZ"
      >
        <div
          className="sc-iJKOTD hwICoq"
          onClick={[Function]}
        >
          <div
            className="sc-bYoBSM zMWPb"
          >
            <div
              className="sc-iwjdpV ktwbqn"
            />
          </div>
          <p
            className="sc-giYglK exfgOC"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test1
          </p>
        </div>
        <div
          className="sc-ezbkAF liwvvH"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-kfPuZi gxqEEA"
    >
      <div
        className="sc-llYSUQ hRpDJZ"
      >
        <div
          className="sc-iJKOTD hwICoq"
          onClick={[Function]}
        >
          <div
            className="sc-bYoBSM zMWPb"
          >
            <div
              className="sc-iwjdpV ktwbqn"
            />
          </div>
          <p
            className="sc-giYglK exfgOC"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test2
          </p>
        </div>
        <div
          className="sc-ezbkAF liwvvH"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-kfPuZi gxqEEA"
    >
      <div
        className="sc-llYSUQ hRpDJZ"
      >
        <div
          className="sc-iJKOTD hwICoq"
          onClick={[Function]}
        >
          <div
            className="sc-bYoBSM zMWPb"
          >
            <div
              className="sc-iwjdpV ktwbqn"
            />
          </div>
          <p
            className="sc-giYglK exfgOC"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test3
          </p>
        </div>
        <div
          className="sc-ezbkAF liwvvH"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
          />
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Panel Task 1`] = `
<div
  className="sc-bBHxTw cLOmoY"
>
  <div
    className="sc-dlVxhl PslTt"
  >
    <button
      className="sc-hGPBjI CtDJB"
      onClick={[Function]}
    >
      TO DO
    </button>
    <button
      className="sc-hGPBjI eqpbgq"
      onClick={[Function]}
    >
      DONE
    </button>
  </div>
  <ul
    className="sc-fKVqWL YANSf"
  >
    <li
      className="sc-kfPuZi gxqEEA"
    >
      <div
        className="sc-jcFjpl itPXCi"
      >
        <div
          className="sc-llYSUQ hRpDJZ"
        >
          <div
            className="sc-iJKOTD hwICoq"
          >
            <div>
              <p
                className="sc-giYglK exfgOC"
              >
                todo 1
              </p>
              <div
                className="sc-cxpSdN ifnyWg"
              >
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-ezbkAF liwvvH"
          >
            <button
              className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-kfPuZi gxqEEA"
    >
      <div
        className="sc-jcFjpl itPXCi"
      >
        <div
          className="sc-llYSUQ hRpDJZ"
        >
          <div
            className="sc-iJKOTD hwICoq"
          >
            <div>
              <p
                className="sc-giYglK exfgOC"
              >
                todo 2
              </p>
              <div
                className="sc-cxpSdN ifnyWg"
              >
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-ezbkAF liwvvH"
          >
            <button
              className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-kfPuZi gxqEEA"
    >
      <div
        className="sc-jcFjpl itPXCi"
      >
        <div
          className="sc-llYSUQ hRpDJZ"
        >
          <div
            className="sc-iJKOTD hwICoq"
          >
            <div>
              <p
                className="sc-giYglK exfgOC"
              >
                todo 3
              </p>
              <div
                className="sc-cxpSdN ifnyWg"
              >
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
                <div
                  className="sc-iwjdpV ktwbqn"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-ezbkAF liwvvH"
          >
            <button
              className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Panel With Empty List 1`] = `
<div
  className="sc-bBHxTw cLOmoY"
>
  <div
    className="sc-dlVxhl PslTt"
  >
    <button
      className="sc-hGPBjI CtDJB"
      onClick={[Function]}
    >
      TO DO
    </button>
    <button
      className="sc-hGPBjI eqpbgq"
      onClick={[Function]}
    >
      DONE
    </button>
  </div>
  <ul
    className="sc-fKVqWL YANSf"
  >
    <li
      className="sc-kfPuZi kHsNhc"
    >
      You don't have any task now,
      <br />
      please add task first!
    </li>
  </ul>
</div>
`;

exports[`Storyshots PanelItem Default 1`] = `
<li
  className="sc-kfPuZi gxqEEA"
>
  <h3>
    Hello World
  </h3>
</li>
`;

exports[`Storyshots PanelList Default 1`] = `
<ul
  className="sc-fKVqWL YANSf"
>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    1
  </li>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    2
  </li>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    3
  </li>
</ul>
`;

exports[`Storyshots Pie Children 1`] = `
<div
  className="sc-caiLqq iNEIww"
  color="#ea5548"
>
  <div
    className="sc-iUKqMP xa-dHx"
    color="#ea5548"
  />
  <div
    className="sc-iAKWXU jyxQLk"
  >
    <p
      style={
        Object {
          "margin": "0",
        }
      }
    >
      children
    </p>
  </div>
</div>
`;

exports[`Storyshots Pie Default 1`] = `
<div
  className="sc-caiLqq iNEIww"
  color="#ea5548"
>
  <div
    className="sc-iUKqMP guDVPh"
    color="#ea5548"
  />
  <div
    className="sc-iAKWXU jyxQLk"
  />
</div>
`;

exports[`Storyshots PlayButton Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-efQSVx iLtAyR"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Record Completed 1`] = `
<div
  className="sc-iwjdpV hzOZNu"
/>
`;

exports[`Storyshots Record Default 1`] = `
<div
  className="sc-iwjdpV ktwbqn"
/>
`;

exports[`Storyshots RecordGroup Default 1`] = `
<div
  className="sc-cxpSdN ifnyWg"
>
  <div
    className="sc-iwjdpV ktwbqn"
  />
  <div
    className="sc-iwjdpV ktwbqn"
  />
  <div
    className="sc-iwjdpV ktwbqn"
  />
  <div
    className="sc-iwjdpV ktwbqn"
  />
  <div
    className="sc-iwjdpV ktwbqn"
  />
</div>
`;

exports[`Storyshots RingtoneItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-llYSUQ hRpDJZ"
  >
    <div
      className="sc-iJKOTD hwICoq"
      onClick={[Function]}
    >
      <div
        className="sc-bYoBSM zMWPb"
      >
        <div
          className="sc-iwjdpV ktwbqn"
        />
      </div>
      <p
        className="sc-giYglK exfgOC"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        test
      </p>
    </div>
    <div
      className="sc-ezbkAF liwvvH"
    >
      <button
        className="sc-bdvvtL fZQeXN"
        onClick={[Function]}
      />
      <audio
        autoPlay={false}
        src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots RingtonePanelList Default 1`] = `
<ul
  className="sc-fKVqWL YANSf"
>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    <div
      className="sc-llYSUQ hRpDJZ"
    >
      <div
        className="sc-iJKOTD hwICoq"
        onClick={[Function]}
      >
        <div
          className="sc-bYoBSM zMWPb"
        >
          <div
            className="sc-iwjdpV ktwbqn"
          />
        </div>
        <p
          className="sc-giYglK exfgOC"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test1
        </p>
      </div>
      <div
        className="sc-ezbkAF liwvvH"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    <div
      className="sc-llYSUQ hRpDJZ"
    >
      <div
        className="sc-iJKOTD hwICoq"
        onClick={[Function]}
      >
        <div
          className="sc-bYoBSM zMWPb"
        >
          <div
            className="sc-iwjdpV ktwbqn"
          />
        </div>
        <p
          className="sc-giYglK exfgOC"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test2
        </p>
      </div>
      <div
        className="sc-ezbkAF liwvvH"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    <div
      className="sc-llYSUQ hRpDJZ"
    >
      <div
        className="sc-iJKOTD hwICoq"
        onClick={[Function]}
      >
        <div
          className="sc-bYoBSM zMWPb"
        >
          <div
            className="sc-iwjdpV ktwbqn"
          />
        </div>
        <p
          className="sc-giYglK exfgOC"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test3
        </p>
      </div>
      <div
        className="sc-ezbkAF liwvvH"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots SectionEmpty Default 1`] = `
<div
  className="sc-dPiLbb gIFIOp"
>
  <div
    className="sc-cTAqQK bAwpRg"
  >
    POMODORO
  </div>
  <p
    className="sc-jObWnj fEiSEr"
  >
    You don't have any task now,
    <br />
    please add task first!
  </p>
</div>
`;

exports[`Storyshots Tab Active 1`] = `
<button
  className="sc-hGPBjI CtDJB"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots Tab Default 1`] = `
<button
  className="sc-hGPBjI eqpbgq"
  onClick={[Function]}
>
  
</button>
`;

exports[`Storyshots Tab Wording 1`] = `
<button
  className="sc-hGPBjI eqpbgq"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots TaskItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-jcFjpl itPXCi"
  >
    <div
      className="sc-llYSUQ hRpDJZ"
    >
      <div
        className="sc-iJKOTD hwICoq"
      >
        <div>
          <p
            className="sc-giYglK exfgOC"
          >
            test
          </p>
          <div
            className="sc-cxpSdN ifnyWg"
          >
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-ezbkAF liwvvH"
      >
        <button
          className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Done 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-jcFjpl itPXCi"
  >
    <div
      className="sc-llYSUQ hRpDJZ"
    >
      <div
        className="sc-iJKOTD hwICoq"
      >
        <div
          className="sc-bYoBSM zMWPb"
        >
          <img
            alt=""
            src="complete.svg"
          />
        </div>
        <div>
          <p
            className="sc-giYglK exfgOC"
          >
            test
          </p>
          <div
            className="sc-cxpSdN ifnyWg"
          >
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-ezbkAF liwvvH"
      >
        <button
          className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Opened 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-jcFjpl itPXCi"
  >
    <div
      className="sc-llYSUQ hRpDJZ"
    >
      <div
        className="sc-iJKOTD hwICoq"
      >
        <div>
          <p
            className="sc-giYglK exfgOC"
          >
            test
          </p>
          <div
            className="sc-cxpSdN ifnyWg"
          >
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
            <div
              className="sc-iwjdpV ktwbqn"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-ezbkAF liwvvH"
      >
        <button
          className="sc-kLwhqv sc-jJoQJp fUDIWX lnkSlT"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
    <hr />
    <div
      className="sc-cidDSM cAlHqF"
    >
      <div>
        <label
          className="sc-ieecCq qVlmW"
        >
          TASK TITLE
        </label>
        <input
          className="sc-hiCibw krVvaX"
          onChange={[Function]}
          type="text"
          value="test"
        />
      </div>
      <div>
        <label
          className="sc-ieecCq qVlmW"
        >
          ESTIMATED TOMATO
        </label>
        <div
          className="sc-cCcXHH fMVsbu"
          onClick={[Function]}
        >
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={1}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={2}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={3}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={4}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={5}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={6}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={7}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={8}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={9}
          />
          <button
            className="sc-gWXbKe gZPMRN"
            data-number={10}
          />
        </div>
      </div>
      <div
        className="sc-hKwDye faWgkr"
      >
        <button
          className="sc-dkPtRN bvmbqx"
          data-large={false}
          onClick={[Function]}
        >
          DELETE
        </button>
        <button
          className="sc-dkPtRN doeNQV"
          data-large={true}
          onClick={[Function]}
        >
          SAVE
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/DoneTask Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-cidDSM cAlHqF"
  >
    <div
      className="sc-hKwDye faWgkr"
    >
      <button
        className="sc-dkPtRN bvmbqx"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-dkPtRN doeNQV"
        data-large={true}
        onClick={[Function]}
      >
        REDO
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/TodoTask Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-cidDSM cAlHqF"
  >
    <div>
      <label
        className="sc-ieecCq qVlmW"
      >
        TASK TITLE
      </label>
      <input
        className="sc-hiCibw krVvaX"
        onChange={[Function]}
        type="text"
        value="test"
      />
    </div>
    <div>
      <label
        className="sc-ieecCq qVlmW"
      >
        ESTIMATED TOMATO
      </label>
      <div
        className="sc-cCcXHH fMVsbu"
        onClick={[Function]}
      >
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={1}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={2}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={3}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={4}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={5}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={6}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={7}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={8}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={9}
        />
        <button
          className="sc-gWXbKe gZPMRN"
          data-number={10}
        />
      </div>
    </div>
    <div
      className="sc-hKwDye faWgkr"
    >
      <button
        className="sc-dkPtRN bvmbqx"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-dkPtRN doeNQV"
        data-large={true}
        onClick={[Function]}
      >
        SAVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-llYSUQ hRpDJZ"
  >
    <div
      className="sc-iJKOTD hwICoq"
    >
      <div>
        <p
          className="sc-giYglK exfgOC"
        >
          test
        </p>
        <div
          className="sc-cxpSdN ifnyWg"
        >
          <div
            className="sc-iwjdpV ktwbqn"
          />
          <div
            className="sc-iwjdpV ktwbqn"
          />
          <div
            className="sc-iwjdpV ktwbqn"
          />
          <div
            className="sc-iwjdpV ktwbqn"
          />
          <div
            className="sc-iwjdpV ktwbqn"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-ezbkAF liwvvH"
    >
      <button
        className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Done 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-llYSUQ hRpDJZ"
  >
    <div
      className="sc-iJKOTD hwICoq"
    >
      <div
        className="sc-bYoBSM zMWPb"
      >
        <img
          alt=""
          src="complete.svg"
        />
      </div>
      <div>
        <p
          className="sc-giYglK exfgOC"
        >
          test
        </p>
        <div
          className="sc-cxpSdN ifnyWg"
        >
          <div
            className="sc-iwjdpV ktwbqn"
          />
          <div
            className="sc-iwjdpV ktwbqn"
          />
          <div
            className="sc-iwjdpV ktwbqn"
          />
          <div
            className="sc-iwjdpV ktwbqn"
          />
          <div
            className="sc-iwjdpV ktwbqn"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-ezbkAF liwvvH"
    >
      <button
        className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskPanelList Default 1`] = `
<ul
  className="sc-fKVqWL YANSf"
>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    <div
      className="sc-jcFjpl itPXCi"
    >
      <div
        className="sc-llYSUQ hRpDJZ"
      >
        <div
          className="sc-iJKOTD hwICoq"
        >
          <div>
            <p
              className="sc-giYglK exfgOC"
            >
              test1
            </p>
            <div
              className="sc-cxpSdN ifnyWg"
            >
              <div
                className="sc-iwjdpV hzOZNu"
              />
              <div
                className="sc-iwjdpV hzOZNu"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-ezbkAF liwvvH"
        >
          <button
            className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    <div
      className="sc-jcFjpl itPXCi"
    >
      <div
        className="sc-llYSUQ hRpDJZ"
      >
        <div
          className="sc-iJKOTD hwICoq"
        >
          <div>
            <p
              className="sc-giYglK exfgOC"
            >
              test2
            </p>
            <div
              className="sc-cxpSdN ifnyWg"
            >
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-ezbkAF liwvvH"
        >
          <button
            className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-kfPuZi gxqEEA"
  >
    <div
      className="sc-jcFjpl itPXCi"
    >
      <div
        className="sc-llYSUQ hRpDJZ"
      >
        <div
          className="sc-iJKOTD hwICoq"
        >
          <div>
            <p
              className="sc-giYglK exfgOC"
            >
              test3
            </p>
            <div
              className="sc-cxpSdN ifnyWg"
            >
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
              <div
                className="sc-iwjdpV ktwbqn"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-ezbkAF liwvvH"
        >
          <button
            className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots TaskPanelList Empty 1`] = `
<ul
  className="sc-fKVqWL YANSf"
>
  <li
    className="sc-kfPuZi kHsNhc"
  >
    You don't have any task now,
    <br />
    please add task first!
  </li>
</ul>
`;

exports[`Storyshots TaskTimer Break 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div
    className="sc-jgrJph eybKzw"
  >
    <div
      className="sc-AjmGg eXFFWP"
    >
      <p
        data-title={true}
      >
        test
      </p>
      <p
        className="sc-hUpaCq cozknZ"
      >
        break
      </p>
    </div>
    <div
      className="sc-caiLqq ieXOrZ"
      color="#b5e254"
    >
      <div
        className="sc-iUKqMP guDVPh"
        color="#b5e254"
      />
      <div
        className="sc-iAKWXU jyxQLk"
      >
        <div
          className="sc-cNKqjZ ILytn"
        >
          <div
            className="sc-bBHHxi"
          >
            00:10
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-khQegj gIRFbl"
    >
      <button
        className="sc-efQSVx iLtAyR"
        onClick={[Function]}
      />
      <button
        className="sc-efQSVx iNORUX"
        onClick={[Function]}
      />
      <button
        className="sc-efQSVx fKEIgM"
        onClick={[Function]}
      />
    </div>
    <button
      className="sc-eCImPb CimIN"
      onClick={[Function]}
    >
      TASK COMPLETED
    </button>
  </div>
</div>
`;

exports[`Storyshots TaskTimer Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div
    className="sc-jgrJph eybKzw"
  >
    <div
      className="sc-AjmGg eXFFWP"
    >
      <p
        data-title={true}
      >
        test
      </p>
      <div
        className="sc-cxpSdN ifnyWg"
      >
        <div
          className="sc-iwjdpV hzOZNu"
        />
        <div
          className="sc-iwjdpV hzOZNu"
        />
        <div
          className="sc-iwjdpV ktwbqn"
        />
        <div
          className="sc-iwjdpV ktwbqn"
        />
        <div
          className="sc-iwjdpV ktwbqn"
        />
      </div>
    </div>
    <div
      className="sc-caiLqq iNEIww"
      color="#ea5548"
    >
      <div
        className="sc-iUKqMP iphkqk"
        color="#ea5548"
      />
      <div
        className="sc-iAKWXU jyxQLk"
      >
        <div
          className="sc-cNKqjZ ILytn"
        >
          <div
            className="sc-bBHHxi"
          >
            00:30
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-khQegj gIRFbl"
    >
      <button
        className="sc-efQSVx iLtAyR"
        onClick={[Function]}
      />
      <button
        className="sc-efQSVx iNORUX"
        onClick={[Function]}
      />
      <button
        className="sc-efQSVx fKEIgM"
        onClick={[Function]}
      />
    </div>
    <button
      className="sc-eCImPb CimIN"
      onClick={[Function]}
    >
      TASK COMPLETED
    </button>
  </div>
</div>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-hiCibw krVvaX"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput Password 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-hiCibw krVvaX"
    onChange={[Function]}
    type="password"
    value=""
  />
</div>
`;

exports[`Storyshots Timer Default 1`] = `
<div
  className="sc-bBHHxi"
>
  00:00
</div>
`;

exports[`Storyshots TimerPie Default 1`] = `
<div
  className="sc-caiLqq iNEIww"
  color="#ea5548"
>
  <div
    className="sc-iUKqMP dKVUrP"
    color="#ea5548"
  />
  <div
    className="sc-iAKWXU jyxQLk"
  >
    <div
      className="sc-cNKqjZ ILytn"
    >
      <div
        className="sc-bBHHxi"
      >
        00:50
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimerSection Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div>
    <div
      className="sc-dPiLbb gIFIOp"
    >
      <div
        className="sc-cTAqQK bAwpRg"
      >
        POMODORO
      </div>
      <p
        className="sc-jObWnj fEiSEr"
      >
        You don't have any task now,
        <br />
        please add task first!
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimerSection Task 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div>
    <div
      className="sc-jgrJph eybKzw"
    >
      <div
        className="sc-AjmGg eXFFWP"
      >
        <p
          data-title={true}
        >
          Test
        </p>
        <div
          className="sc-cxpSdN ifnyWg"
        >
          <div
            className="sc-iwjdpV ktwbqn"
          />
        </div>
      </div>
      <div
        className="sc-caiLqq iNEIww"
        color="#ea5548"
      >
        <div
          className="sc-iUKqMP guDVPh"
          color="#ea5548"
        />
        <div
          className="sc-iAKWXU jyxQLk"
        >
          <div
            className="sc-cNKqjZ ILytn"
          >
            <div
              className="sc-bBHHxi"
            >
              00:10
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-khQegj gIRFbl"
      >
        <button
          className="sc-efQSVx iLtAyR"
          onClick={[Function]}
        />
        <button
          className="sc-efQSVx iNORUX"
          onClick={[Function]}
        />
        <button
          className="sc-efQSVx fKEIgM"
          onClick={[Function]}
        />
      </div>
      <button
        className="sc-eCImPb CimIN"
        onClick={[Function]}
      >
        TASK COMPLETED
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Title Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-gSQFLo erDzB"
  >
    <h1
      className="sc-lbhJGD hPYHs"
    >
      TEST
    </h1>
    <hr />
  </div>
</div>
`;

exports[`Storyshots ToggleButton Default 1`] = `
<button
  className="sc-kLwhqv sc-jJoQJp fUDIWX lhrZgO"
  onClick={[Function]}
>
  ...
</button>
`;

exports[`Storyshots ToggleButton Primary 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-kLwhqv sc-ikJyIC fUDIWX dlAfXc"
    onClick={[Function]}
  >
    <img
      alt=""
      data-image="tomato"
      src="tomato_small_color.svg"
    />
    <img
      alt=""
      data-image="arrow"
      src="arrow.svg"
    />
  </button>
</div>
`;

exports[`Storyshots TomatoButton Active 1`] = `
<button
  className="sc-gWXbKe EVJNx"
/>
`;

exports[`Storyshots TomatoButton Default 1`] = `
<button
  className="sc-gWXbKe gZPMRN"
/>
`;

exports[`Storyshots TomatoButtonGroup Default 1`] = `
<div
  className="sc-cCcXHH fMVsbu"
  onClick={[Function]}
>
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={1}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={2}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={3}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={4}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={5}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={6}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={7}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={8}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={9}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={10}
  />
</div>
`;

exports[`Storyshots TomatoButtonGroup Default Selected Number 1`] = `
<div
  className="sc-cCcXHH fMVsbu"
  onClick={[Function]}
>
  <button
    className="sc-gWXbKe EVJNx"
    data-number={1}
  />
  <button
    className="sc-gWXbKe EVJNx"
    data-number={2}
  />
  <button
    className="sc-gWXbKe EVJNx"
    data-number={3}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={4}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={5}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={6}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={7}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={8}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={9}
  />
  <button
    className="sc-gWXbKe gZPMRN"
    data-number={10}
  />
</div>
`;
